feat(CBS-280274:LN-59163:LN-59442): fix recon inbox re-drive, add detection-settling and money gate
Production-readiness fixes to the Nova facility-state reconciliation SPIs (LN-59442 audit):
- Inbox re-drive (INV-7) was dead code: REDRIVABLE_INBOX_OPS held enum NAMES but the inbox stores the
  dotted wire code (FcbEventOperationType.getCode()), so every FCB->Nova dead-letter escalated to
  NEEDS_OPERATOR. Fixed to the wire codes + a contract guard test.
- redriveDeadLetteredInbox: check status==DEAD_LETTERED before redrivability and escalate only after the
  full scan finds no redrivable dead-letter (was escalating on the first correlated non-dead row).
- Detection-settling lower bound (reconciliation.detection-settle, default 3m): FacilityReconReadPort
  excludes facilities modified more recently than the cutoff, so a just-created facility whose CREATE is
  still in the corridor is not opened as a premature ORPHAN/LAGGING (the real "early result").
- Defense-in-depth money gate: converge() re-asserts isMoneyState on the freshly re-read status (INV-15).
- ArchUnit rule forbidding the recon adapter depending on the command dispatcher / command handlers (INV-4).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>